# serializer version: 1
# name: TestCodegenSnapshots.test_large_operator_coverage_codegen_snapshot
  '''
  // model.c
  // ============================================================
  /* Auto-generated by NNC - DO NOT EDIT */
  
  #include <stdio.h>
  #include <stdlib.h>
  #include "model.h"
  #include "nnc_ops.h"
  
  /* Tensor declarations */
  extern Tensor tensor_input;
  extern Tensor tensor_output;
  extern Tensor tensor_Add_output_0;
  extern Tensor tensor_Mul_output_0;
  extern Tensor tensor_Sub_output_0;
  extern Tensor tensor_Div_output_0;
  extern Tensor tensor_Pow_output_0;
  extern Tensor tensor_Clip_output_0;
  extern Tensor tensor_Add_1_output_0;
  extern Tensor tensor_Sqrt_output_0;
  extern Tensor tensor_Clip_1_output_0;
  extern Tensor tensor_Relu_output_0;
  extern Tensor tensor_MatMul_output_0;
  extern Tensor tensor_Reshape_output_0;
  extern Tensor tensor_ReduceMean_output_0;
  extern Tensor tensor_ReduceSum_output_0;
  extern Tensor tensor_Concat_1_output_0;
  extern Tensor tensor_Unsqueeze_2_output_0;
  extern Tensor tensor_Tile_output_0;
  extern Tensor tensor_Transpose_output_0;
  extern Tensor tensor_Split_output_0;
  extern Tensor tensor_Split_output_1;
  extern Tensor tensor_Greater_output_0;
  extern Tensor tensor_Greater_1_output_0;
  extern Tensor tensor_Greater_2_output_0;
  extern Tensor tensor_And_output_0;
  extern Tensor tensor_Or_output_0;
  extern Tensor tensor_Not_output_0;
  extern Tensor tensor_Cast_5_output_0;
  extern Tensor tensor_Cast_6_output_0;
  extern Tensor tensor_Cast_7_output_0;
  extern Tensor tensor_Concat_2_output_0;
  extern Tensor tensor_weight;
  extern Tensor tensor_scale;
  extern Tensor tensor_Constant_output_0;
  extern Tensor tensor_Constant_1_output_0;
  extern Tensor tensor_Constant_2_output_0;
  extern Tensor tensor_Constant_5_output_0;
  extern Tensor tensor_onnx_ReduceSum_36;
  extern Tensor tensor_Constant_10_output_0;
  extern Tensor tensor_onnx_Shape_42;
  extern Tensor tensor_Constant_11_output_0;
  extern Tensor tensor_Constant_12_output_0;
  extern Tensor tensor_Cast_2_output_0;
  extern Tensor tensor_Concat_output_0;
  
  /* Add: /Add */
  void node_Add(void) {
      nnc_add(&tensor_input, &tensor_Constant_output_0, &tensor_Add_output_0);
  }
  
  /* Mul: /Mul */
  void node_Mul(void) {
      nnc_mul(&tensor_Add_output_0, &tensor_scale, &tensor_Mul_output_0);
  }
  
  /* Sub: /Sub */
  void node_Sub(void) {
      nnc_sub(&tensor_Mul_output_0, &tensor_Constant_1_output_0, &tensor_Sub_output_0);
  }
  
  /* Div: /Div */
  void node_Div(void) {
      nnc_div(&tensor_Sub_output_0, &tensor_Constant_2_output_0, &tensor_Div_output_0);
  }
  
  /* Pow: /Pow */
  void node_Pow(void) {
      nnc_pow(&tensor_Div_output_0, &tensor_Pow_output_0);
  }
  
  /* Clip: /Clip */
  void node_Clip(void) {
      nnc_clip(&tensor_Pow_output_0, &tensor_Clip_output_0, 0.0f, 3.402823e38f);
  }
  
  /* Add: /Add_1 */
  void node_Add_1(void) {
      nnc_add(&tensor_Clip_output_0, &tensor_Constant_5_output_0, &tensor_Add_1_output_0);
  }
  
  /* Sqrt: /Sqrt */
  void node_Sqrt(void) {
      nnc_sqrt(&tensor_Add_1_output_0, &tensor_Sqrt_output_0);
  }
  
  /* Clip: /Clip_1 */
  void node_Clip_1(void) {
      nnc_clip(&tensor_Sqrt_output_0, &tensor_Clip_1_output_0, -1.0f, 1.0f);
  }
  
  /* Relu: /Relu */
  void node_Relu(void) {
      nnc_relu(&tensor_Clip_1_output_0, &tensor_Relu_output_0);
  }
  
  /* MatMul: /MatMul */
  void node_MatMul(void) {
      nnc_matmul(&tensor_Relu_output_0, &tensor_weight, &tensor_MatMul_output_0);
  }
  
  /* Reshape: /Reshape */
  void node_Reshape(void) {
      nnc_reshape(&tensor_MatMul_output_0, &tensor_Reshape_output_0, (int64_t*)tensor_Concat_output_0_data, 2);
  }
  
  /* ReduceMean: /ReduceMean */
  void node_ReduceMean(void) {
      nnc_reducemean(&tensor_Reshape_output_0, &tensor_ReduceMean_output_0, 1, 1);
  }
  
  /* ReduceSum: /ReduceSum */
  void node_ReduceSum(void) {
      nnc_reducesum(&tensor_Reshape_output_0, &tensor_ReduceSum_output_0, -1, 1);
  }
  
  /* Concat: /Concat_1 */
  void node_Concat_1(void) {
      static Tensor* node_Concat_1_inputs[2] = {
          &tensor_ReduceMean_output_0,
          &tensor_ReduceSum_output_0,
      };
      nnc_concat(node_Concat_1_inputs, &tensor_Concat_1_output_0, 2, 1);
  }
  
  /* Unsqueeze: /Unsqueeze_2 */
  void node_Unsqueeze_2(void) {
      nnc_unsqueeze(&tensor_Concat_1_output_0, &tensor_Unsqueeze_2_output_0, 0);
  }
  
  /* Tile: /Tile */
  void node_Tile(void) {
      nnc_tile(&tensor_Unsqueeze_2_output_0, &tensor_Tile_output_0, (int64_t*)tensor_onnx_Shape_42_data, 3);
  }
  
  /* Transpose: /Transpose */
  void node_Transpose(void) {
      static const int64_t node_Transpose_perm[] = {0, 2, 1};
      nnc_transpose(&tensor_Tile_output_0, &tensor_Transpose_output_0, (int64_t*)node_Transpose_perm, 3);
  }
  
  /* Split: /Split */
  void node_Split(void) {
      static Tensor* node_Split_outputs[2] = {
          &tensor_Split_output_0,
          &tensor_Split_output_1,
      };
      nnc_split(&tensor_Transpose_output_0, node_Split_outputs, 2, 2);
  }
  
  /* Greater: /Greater */
  void node_Greater(void) {
      nnc_greater(&tensor_Split_output_0, &tensor_Constant_12_output_0, &tensor_Greater_output_0);
  }
  
  /* Greater: /Greater_1 */
  void node_Greater_1(void) {
      nnc_greater(&tensor_Split_output_0, &tensor_Constant_output_0, &tensor_Greater_1_output_0);
  }
  
  /* Greater: /Greater_2 */
  void node_Greater_2(void) {
      nnc_greater(&tensor_Split_output_1, &tensor_Constant_12_output_0, &tensor_Greater_2_output_0);
  }
  
  /* Not: /Not */
  void node_Not(void) {
      nnc_not(&tensor_Greater_output_0, &tensor_Not_output_0);
  }
  
  /* And: /And */
  void node_And(void) {
      nnc_and(&tensor_Greater_output_0, &tensor_Greater_1_output_0, &tensor_And_output_0);
  }
  
  /* Or: /Or */
  void node_Or(void) {
      nnc_or(&tensor_Greater_output_0, &tensor_Greater_2_output_0, &tensor_Or_output_0);
  }
  
  /* Cast: /Cast_7 */
  void node_Cast_7(void) {
      nnc_cast(&tensor_Not_output_0, &tensor_Cast_7_output_0, NNC_DTYPE_FLOAT32);
  }
  
  /* Cast: /Cast_5 */
  void node_Cast_5(void) {
      nnc_cast(&tensor_And_output_0, &tensor_Cast_5_output_0, NNC_DTYPE_FLOAT32);
  }
  
  /* Cast: /Cast_6 */
  void node_Cast_6(void) {
      nnc_cast(&tensor_Or_output_0, &tensor_Cast_6_output_0, NNC_DTYPE_FLOAT32);
  }
  
  /* Concat: /Concat_2 */
  void node_Concat_2(void) {
      static Tensor* node_Concat_2_inputs[3] = {
          &tensor_Cast_5_output_0,
          &tensor_Cast_6_output_0,
          &tensor_Cast_7_output_0,
      };
      nnc_concat(node_Concat_2_inputs, &tensor_Concat_2_output_0, 3, 1);
  }
  
  /* ReduceMean: /ReduceMean_1 */
  void node_ReduceMean_1(void) {
      nnc_reducemean(&tensor_Concat_2_output_0, &tensor_output, 1, 0);
  }
  
  /* Main inference entry point */
  void nnc_run(void) {
      node_Add();
      node_Mul();
      node_Sub();
      node_Div();
      node_Pow();
      node_Clip();
      node_Add_1();
      node_Sqrt();
      node_Clip_1();
      node_Relu();
      node_MatMul();
      node_Reshape();
      node_ReduceMean();
      node_ReduceSum();
      node_Concat_1();
      node_Unsqueeze_2();
      node_Tile();
      node_Transpose();
      node_Split();
      node_Greater();
      node_Greater_1();
      node_Greater_2();
      node_Not();
      node_And();
      node_Or();
      node_Cast_7();
      node_Cast_5();
      node_Cast_6();
      node_Concat_2();
      node_ReduceMean_1();
  }
  
  
  // model.h
  // ============================================================
  /* Auto-generated by NTC - DO NOT EDIT */
  #ifndef MODEL_H
  #define MODEL_H
  
  #include <stdint.h>
  #include "nnc_types.h"
  
  /* Tensor declarations */
  extern Tensor tensor_input;
  extern Tensor tensor_output;
  extern Tensor tensor_Add_output_0;
  extern Tensor tensor_Mul_output_0;
  extern Tensor tensor_Sub_output_0;
  extern Tensor tensor_Div_output_0;
  extern Tensor tensor_Pow_output_0;
  extern Tensor tensor_Clip_output_0;
  extern Tensor tensor_Add_1_output_0;
  extern Tensor tensor_Sqrt_output_0;
  extern Tensor tensor_Clip_1_output_0;
  extern Tensor tensor_Relu_output_0;
  extern Tensor tensor_MatMul_output_0;
  extern Tensor tensor_Reshape_output_0;
  extern Tensor tensor_ReduceMean_output_0;
  extern Tensor tensor_ReduceSum_output_0;
  extern Tensor tensor_Concat_1_output_0;
  extern Tensor tensor_Unsqueeze_2_output_0;
  extern Tensor tensor_Tile_output_0;
  extern Tensor tensor_Transpose_output_0;
  extern Tensor tensor_Split_output_0;
  extern Tensor tensor_Split_output_1;
  extern Tensor tensor_Greater_output_0;
  extern Tensor tensor_Greater_1_output_0;
  extern Tensor tensor_Greater_2_output_0;
  extern Tensor tensor_And_output_0;
  extern Tensor tensor_Or_output_0;
  extern Tensor tensor_Not_output_0;
  extern Tensor tensor_Cast_5_output_0;
  extern Tensor tensor_Cast_6_output_0;
  extern Tensor tensor_Cast_7_output_0;
  extern Tensor tensor_Concat_2_output_0;
  extern Tensor tensor_weight;
  extern Tensor tensor_scale;
  extern Tensor tensor_Constant_output_0;
  extern Tensor tensor_Constant_1_output_0;
  extern Tensor tensor_Constant_2_output_0;
  extern Tensor tensor_Constant_5_output_0;
  extern Tensor tensor_onnx_ReduceSum_36;
  extern Tensor tensor_Constant_10_output_0;
  extern Tensor tensor_onnx_Shape_42;
  extern Tensor tensor_Constant_11_output_0;
  extern Tensor tensor_Constant_12_output_0;
  extern Tensor tensor_Cast_2_output_0;
  extern Tensor tensor_Concat_output_0;
  extern const int64_t tensor_onnx_ReduceSum_36_data[1];
  extern const int64_t tensor_Constant_10_output_0_data[1];
  extern const int64_t tensor_onnx_Shape_42_data[3];
  extern const int64_t tensor_Constant_11_output_0_data[2];
  extern const int64_t tensor_Concat_output_0_data[2];
  
  /* Constants loading function */
  int nnc_load_constants(const char* path);
  
  /* Main inference function */
  void nnc_run(void);
  
  #endif  // MODEL_H
  
  // tensors.c
  // ============================================================
  /* Auto-generated by NNC - DO NOT EDIT */
  #include "nnc_types.h"
  
  /* Static Memory Pool */
  /* Total size: <SIZE> bytes (<SIZE_FORMAT>) */
  /* Buffers: <COUNT>, Tensors: <COUNT> */
  #define NNC_MEMORY_SIZE <SIZE>
  #define NNC_MEMORY_ALIGNMENT 16
  static uint8_t _nnc_memory_pool[NNC_MEMORY_SIZE] __attribute__((aligned(NNC_MEMORY_ALIGNMENT))) = {0};
  
  
  /* Tensor: input */
  static int64_t tensor_input_shape[] = {4, 64, 128};
  Tensor tensor_input = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_input_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: output */
  static int64_t tensor_output_shape[] = {4, 1};
  Tensor tensor_output = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_output_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Add_output_0 */
  static int64_t tensor_Add_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Add_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Add_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Mul_output_0 */
  static int64_t tensor_Mul_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Mul_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Mul_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Sub_output_0 */
  static int64_t tensor_Sub_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Sub_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Sub_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Div_output_0 */
  static int64_t tensor_Div_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Div_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Div_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Pow_output_0 */
  static int64_t tensor_Pow_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Pow_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Pow_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Clip_output_0 */
  static int64_t tensor_Clip_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Clip_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Clip_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Add_1_output_0 */
  static int64_t tensor_Add_1_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Add_1_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Add_1_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Sqrt_output_0 */
  static int64_t tensor_Sqrt_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Sqrt_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Sqrt_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Clip_1_output_0 */
  static int64_t tensor_Clip_1_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Clip_1_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Clip_1_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Relu_output_0 */
  static int64_t tensor_Relu_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Relu_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Relu_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /MatMul_output_0 */
  static int64_t tensor_MatMul_output_0_shape[] = {4, 64, 64};
  Tensor tensor_MatMul_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_MatMul_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Reshape_output_0 */
  static int64_t tensor_Reshape_output_0_shape[] = {4, 4096};
  Tensor tensor_Reshape_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Reshape_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /ReduceMean_output_0 */
  static int64_t tensor_ReduceMean_output_0_shape[] = {4, 1};
  Tensor tensor_ReduceMean_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_ReduceMean_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /ReduceSum_output_0 */
  static int64_t tensor_ReduceSum_output_0_shape[] = {4, 1};
  Tensor tensor_ReduceSum_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_ReduceSum_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Concat_1_output_0 */
  static int64_t tensor_Concat_1_output_0_shape[] = {4, 2};
  Tensor tensor_Concat_1_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Concat_1_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Unsqueeze_2_output_0 */
  static int64_t tensor_Unsqueeze_2_output_0_shape[] = {4, 2, 1};
  Tensor tensor_Unsqueeze_2_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Unsqueeze_2_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Tile_output_0 */
  static int64_t tensor_Tile_output_0_shape[] = {4, 2, 64};
  Tensor tensor_Tile_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Tile_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Transpose_output_0 */
  static int64_t tensor_Transpose_output_0_shape[] = {4, 64, 2};
  Tensor tensor_Transpose_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Transpose_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Split_output_0 */
  static int64_t tensor_Split_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Split_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Split_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Split_output_1 */
  static int64_t tensor_Split_output_1_shape[] = {4, 64, 1};
  Tensor tensor_Split_output_1 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Split_output_1_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Greater_output_0 */
  static int64_t tensor_Greater_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Greater_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Greater_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Greater_1_output_0 */
  static int64_t tensor_Greater_1_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Greater_1_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Greater_1_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Greater_2_output_0 */
  static int64_t tensor_Greater_2_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Greater_2_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Greater_2_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /And_output_0 */
  static int64_t tensor_And_output_0_shape[] = {4, 64, 1};
  Tensor tensor_And_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_And_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Or_output_0 */
  static int64_t tensor_Or_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Or_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Or_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Not_output_0 */
  static int64_t tensor_Not_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Not_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Not_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Cast_5_output_0 */
  static int64_t tensor_Cast_5_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Cast_5_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Cast_5_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Cast_6_output_0 */
  static int64_t tensor_Cast_6_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Cast_6_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Cast_6_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Cast_7_output_0 */
  static int64_t tensor_Cast_7_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Cast_7_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Cast_7_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Concat_2_output_0 */
  static int64_t tensor_Concat_2_output_0_shape[] = {4, 192, 1};
  Tensor tensor_Concat_2_output_0 = {
      .data = _nnc_memory_pool + <OFFSET>,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Concat_2_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  
  '''
# ---
# name: TestCodegenSnapshots.test_large_operator_coverage_codegen_with_memory_constraint
  '''
  // model.c
  // ============================================================
  /* Auto-generated by NNC - DO NOT EDIT */
  
  #include <stdio.h>
  #include <stdlib.h>
  #include <string.h>
  #include "model.h"
  #include "nnc_ops.h"
  
  /* External memory pools (defined in tensors.c) */
  extern uint8_t _nnc_fast_pool[];
  extern uint8_t _nnc_slow_pool[];
  
  /* Reload buffers in fast memory for spilled tensors */
  /* Max reload slots: 1, Slot size: 4 */
  static uint8_t _nnc_reload_buffer_0[4];
  
  static void node_ReduceMean_body(void);
  static void node_ReduceSum_body(void);
  static void node_Concat_1_body(void);
  static void node_Unsqueeze_2_body(void);
  static void node_Tile_body(void);
  static void node_Transpose_body(void);
  static void node_Split_body(void);
  static void node_Greater_2_body(void);
  static void node_Not_body(void);
  static void node_And_body(void);
  static void node_Or_body(void);
  static void node_Cast_7_body(void);
  static void node_Cast_5_body(void);
  static void node_Cast_6_body(void);
  static void node_Concat_2_body(void);
  static void node_ReduceMean_1_body(void);
  
  /* Spill/Reload wrapper functions */
  /* node_Add: Add */
  static void node_Add(void) {
      /* Temp tensors pointing to fast memory */
      static Tensor temp_tensor_Constant_output_0;
      /* Reload /Constant_output_0 from slow to fast memory */
      memcpy(_nnc_reload_buffer_0,
             _nnc_slow_pool + 131072, 4);
      temp_tensor_Constant_output_0.data = _nnc_reload_buffer_0;
      temp_tensor_Constant_output_0.dtype = tensor_Constant_output_0.dtype;
      temp_tensor_Constant_output_0.shape = tensor_Constant_output_0.shape;
      temp_tensor_Constant_output_0.ndim = tensor_Constant_output_0.ndim;
      temp_tensor_Constant_output_0.nbytes = 4;
  
      /* Execute operator in fast memory */
      nnc_add(&tensor_input, &temp_tensor_Constant_output_0, &tensor_Add_output_0);
  }
  
  /* node_Mul: Mul */
  static void node_Mul(void) {
      /* Execute operator in fast memory */
      nnc_mul(&tensor_Add_output_0, &tensor_scale, &tensor_Mul_output_0);
  }
  
  /* node_Sub: Sub */
  static void node_Sub(void) {
      /* Execute operator in fast memory */
      nnc_sub(&tensor_Mul_output_0, &tensor_Constant_1_output_0, &tensor_Sub_output_0);
  }
  
  /* node_Div: Div */
  static void node_Div(void) {
      /* Temp tensors pointing to fast memory */
      static Tensor temp_tensor_Constant_2_output_0;
      /* Reload /Constant_2_output_0 from slow to fast memory */
      memcpy(_nnc_reload_buffer_0,
             _nnc_slow_pool + 524300, 4);
      temp_tensor_Constant_2_output_0.data = _nnc_reload_buffer_0;
      temp_tensor_Constant_2_output_0.dtype = tensor_Constant_2_output_0.dtype;
      temp_tensor_Constant_2_output_0.shape = tensor_Constant_2_output_0.shape;
      temp_tensor_Constant_2_output_0.ndim = tensor_Constant_2_output_0.ndim;
      temp_tensor_Constant_2_output_0.nbytes = 4;
  
      /* Execute operator in fast memory */
      nnc_div(&tensor_Sub_output_0, &temp_tensor_Constant_2_output_0, &tensor_Div_output_0);
  }
  
  /* node_Pow: Pow */
  static void node_Pow(void) {
      /* Temp tensors pointing to fast memory */
      static Tensor temp_tensor_Constant_2_output_0;
      /* Reload /Constant_2_output_0 from slow to fast memory */
      memcpy(_nnc_reload_buffer_0,
             _nnc_slow_pool + 524300, 4);
      temp_tensor_Constant_2_output_0.data = _nnc_reload_buffer_0;
      temp_tensor_Constant_2_output_0.dtype = tensor_Constant_2_output_0.dtype;
      temp_tensor_Constant_2_output_0.shape = tensor_Constant_2_output_0.shape;
      temp_tensor_Constant_2_output_0.ndim = tensor_Constant_2_output_0.ndim;
      temp_tensor_Constant_2_output_0.nbytes = 4;
  
      /* Execute operator in fast memory */
      nnc_pow(&tensor_Div_output_0, &tensor_Pow_output_0);
  }
  
  /* node_Clip: Clip */
  static void node_Clip(void) {
      /* Temp tensors pointing to fast memory */
      static Tensor temp_tensor_Constant_12_output_0;
      /* Reload /Constant_12_output_0 from slow to fast memory */
      memcpy(_nnc_reload_buffer_0,
             _nnc_slow_pool + 786448, 4);
      temp_tensor_Constant_12_output_0.data = _nnc_reload_buffer_0;
      temp_tensor_Constant_12_output_0.dtype = tensor_Constant_12_output_0.dtype;
      temp_tensor_Constant_12_output_0.shape = tensor_Constant_12_output_0.shape;
      temp_tensor_Constant_12_output_0.ndim = tensor_Constant_12_output_0.ndim;
      temp_tensor_Constant_12_output_0.nbytes = 4;
  
      /* Execute operator in fast memory */
      nnc_clip(&tensor_Pow_output_0, &tensor_Clip_output_0, 0.0f, 1e30f);
  }
  
  /* node_Add_1: Add */
  static void node_Add_1(void) {
      /* Execute operator in fast memory */
      nnc_add(&tensor_Clip_output_0, &tensor_Constant_5_output_0, &tensor_Add_1_output_0);
  }
  
  /* node_Sqrt: Sqrt */
  static void node_Sqrt(void) {
      /* Execute operator in fast memory */
      nnc_sqrt(&tensor_Add_1_output_0, &tensor_Sqrt_output_0);
  }
  
  /* node_Clip_1: Clip */
  static void node_Clip_1(void) {
      /* Temp tensors pointing to fast memory */
      static Tensor temp_tensor_Constant_output_0;
      /* Reload /Constant_output_0 from slow to fast memory */
      memcpy(_nnc_reload_buffer_0,
             _nnc_slow_pool + 131072, 4);
      temp_tensor_Constant_output_0.data = _nnc_reload_buffer_0;
      temp_tensor_Constant_output_0.dtype = tensor_Constant_output_0.dtype;
      temp_tensor_Constant_output_0.shape = tensor_Constant_output_0.shape;
      temp_tensor_Constant_output_0.ndim = tensor_Constant_output_0.ndim;
      temp_tensor_Constant_output_0.nbytes = 4;
  
      /* Execute operator in fast memory */
      nnc_clip(&tensor_Sqrt_output_0, &tensor_Clip_1_output_0, -1.0f, 1.0f);
  }
  
  /* node_Relu: Relu */
  static void node_Relu(void) {
      /* Execute operator in fast memory */
      nnc_relu(&tensor_Clip_1_output_0, &tensor_Relu_output_0);
  }
  
  /* node_MatMul: MatMul */
  static void node_MatMul(void) {
      /* Execute operator in fast memory */
      nnc_matmul(&tensor_Relu_output_0, &tensor_weight, &tensor_MatMul_output_0);
  }
  
  /* node_Reshape: Reshape */
  static void node_Reshape(void) {
      /* Execute operator in fast memory */
      static const int64_t node_Reshape_shape[] = {4, -1};
      nnc_reshape(&tensor_MatMul_output_0, &tensor_Reshape_output_0, (int64_t*)node_Reshape_shape, 2);
  }
  
  /* node_ReduceMean: ReduceMean */
  static void node_ReduceMean(void) {
      /* Execute operator in fast memory */
      nnc_reducemean(&tensor_Reshape_output_0, &tensor_ReduceMean_output_0, 1, 1);
  }
  
  /* node_ReduceSum: ReduceSum */
  static void node_ReduceSum(void) {
      /* Execute operator in fast memory */
      nnc_reducesum(&tensor_Reshape_output_0, &tensor_ReduceSum_output_0, 1, 1);
  }
  
  /* node_Concat_1: Concat */
  static void node_Concat_1(void) {
      /* Execute operator in fast memory */
      static Tensor* node_Concat_1_inputs[2] = {&tensor_ReduceMean_output_0, &tensor_ReduceSum_output_0};
      nnc_concat(node_Concat_1_inputs, &tensor_Concat_1_output_0, 2, 1);
  }
  
  /* node_Unsqueeze_2: Unsqueeze */
  static void node_Unsqueeze_2(void) {
      /* Execute operator in fast memory */
      nnc_unsqueeze(&tensor_Concat_1_output_0, &tensor_Unsqueeze_2_output_0, -1);
  }
  
  /* node_Tile: Tile */
  static void node_Tile(void) {
      /* Execute operator in fast memory */
      static const int64_t node_Tile_repeats[] = {1, 1, 64};
      nnc_tile(&tensor_Unsqueeze_2_output_0, &tensor_Tile_output_0, (int64_t*)node_Tile_repeats, 3);
  }
  
  /* node_Transpose: Transpose */
  static void node_Transpose(void) {
      /* Execute operator in fast memory */
      static const int64_t node_Transpose_perm[] = {0, 2, 1};
      nnc_transpose(&tensor_Tile_output_0, &tensor_Transpose_output_0, (int64_t*)node_Transpose_perm, 3);
  }
  
  /* node_Split: Split */
  static void node_Split(void) {
      /* Execute operator in fast memory */
      static Tensor* node_Split_outputs[2] = {&tensor_Split_output_0, &tensor_Split_output_1};
      nnc_split(&tensor_Transpose_output_0, node_Split_outputs, 2, 2);
  }
  
  /* node_Greater: Greater */
  static void node_Greater(void) {
      /* Temp tensors pointing to fast memory */
      static Tensor temp_tensor_Constant_12_output_0;
      /* Reload /Constant_12_output_0 from slow to fast memory */
      memcpy(_nnc_reload_buffer_0,
             _nnc_slow_pool + 786448, 4);
      temp_tensor_Constant_12_output_0.data = _nnc_reload_buffer_0;
      temp_tensor_Constant_12_output_0.dtype = tensor_Constant_12_output_0.dtype;
      temp_tensor_Constant_12_output_0.shape = tensor_Constant_12_output_0.shape;
      temp_tensor_Constant_12_output_0.ndim = tensor_Constant_12_output_0.ndim;
      temp_tensor_Constant_12_output_0.nbytes = 4;
  
      /* Execute operator in fast memory */
      nnc_greater(&tensor_Split_output_0, &temp_tensor_Constant_12_output_0, &tensor_Greater_output_0);
  }
  
  /* node_Greater_1: Greater */
  static void node_Greater_1(void) {
      /* Temp tensors pointing to fast memory */
      static Tensor temp_tensor_Constant_output_0;
      /* Reload /Constant_output_0 from slow to fast memory */
      memcpy(_nnc_reload_buffer_0,
             _nnc_slow_pool + 131072, 4);
      temp_tensor_Constant_output_0.data = _nnc_reload_buffer_0;
      temp_tensor_Constant_output_0.dtype = tensor_Constant_output_0.dtype;
      temp_tensor_Constant_output_0.shape = tensor_Constant_output_0.shape;
      temp_tensor_Constant_output_0.ndim = tensor_Constant_output_0.ndim;
      temp_tensor_Constant_output_0.nbytes = 4;
  
      /* Execute operator in fast memory */
      nnc_greater(&tensor_Split_output_0, &temp_tensor_Constant_output_0, &tensor_Greater_1_output_0);
  }
  
  /* node_Greater_2: Greater */
  static void node_Greater_2(void) {
      /* Temp tensors pointing to fast memory */
      static Tensor temp_tensor_Constant_12_output_0;
      /* Reload /Constant_12_output_0 from slow to fast memory */
      memcpy(_nnc_reload_buffer_0,
             _nnc_slow_pool + 786448, 4);
      temp_tensor_Constant_12_output_0.data = _nnc_reload_buffer_0;
      temp_tensor_Constant_12_output_0.dtype = tensor_Constant_12_output_0.dtype;
      temp_tensor_Constant_12_output_0.shape = tensor_Constant_12_output_0.shape;
      temp_tensor_Constant_12_output_0.ndim = tensor_Constant_12_output_0.ndim;
      temp_tensor_Constant_12_output_0.nbytes = 4;
  
      /* Execute operator in fast memory */
      nnc_greater(&tensor_Split_output_1, &temp_tensor_Constant_12_output_0, &tensor_Greater_2_output_0);
  }
  
  /* node_Not: Not */
  static void node_Not(void) {
      /* Execute operator in fast memory */
      nnc_not(&tensor_Greater_output_0, &tensor_Not_output_0);
  }
  
  /* node_And: And */
  static void node_And(void) {
      /* Execute operator in fast memory */
      nnc_and(&tensor_Greater_output_0, &tensor_Greater_1_output_0, &tensor_And_output_0);
  }
  
  /* node_Or: Or */
  static void node_Or(void) {
      /* Execute operator in fast memory */
      nnc_or(&tensor_Greater_output_0, &tensor_Greater_2_output_0, &tensor_Or_output_0);
  }
  
  /* node_Cast_7: Cast */
  static void node_Cast_7(void) {
      /* Execute operator in fast memory */
      nnc_cast(&tensor_Not_output_0, &tensor_Cast_7_output_0, NNC_DTYPE_FLOAT32);
  }
  
  /* node_Cast_5: Cast */
  static void node_Cast_5(void) {
      /* Execute operator in fast memory */
      nnc_cast(&tensor_And_output_0, &tensor_Cast_5_output_0, NNC_DTYPE_FLOAT32);
  }
  
  /* node_Cast_6: Cast */
  static void node_Cast_6(void) {
      /* Execute operator in fast memory */
      nnc_cast(&tensor_Or_output_0, &tensor_Cast_6_output_0, NNC_DTYPE_FLOAT32);
  }
  
  /* node_Concat_2: Concat */
  static void node_Concat_2(void) {
      /* Execute operator in fast memory */
      static Tensor* node_Concat_2_inputs[3] = {&tensor_Cast_5_output_0, &tensor_Cast_6_output_0, &tensor_Cast_7_output_0};
      nnc_concat(node_Concat_2_inputs, &tensor_Concat_2_output_0, 3, 1);
  }
  
  /* node_ReduceMean_1: ReduceMean */
  static void node_ReduceMean_1(void) {
      /* Execute operator in fast memory */
      nnc_reducemean(&tensor_Concat_2_output_0, &tensor_output, 1, 0);
  }
  
  /* Node body functions (no spill/reload needed) */
  /* node_ReduceMean: ReduceMean */
  static void node_ReduceMean_body(void) {
      nnc_reducemean(&tensor_Reshape_output_0, &tensor_ReduceMean_output_0, 1, 1);
  }
  
  /* node_ReduceSum: ReduceSum */
  static void node_ReduceSum_body(void) {
      nnc_reducesum(&tensor_Reshape_output_0, &tensor_ReduceSum_output_0, 1, 1);
  }
  
  /* node_Concat_1: Concat */
  static void node_Concat_1_body(void) {
      static Tensor* node_Concat_1_inputs[2] = {&tensor_ReduceMean_output_0, &tensor_ReduceSum_output_0};
      nnc_concat(node_Concat_1_inputs, &tensor_Concat_1_output_0, 2, 1);
  }
  
  /* node_Unsqueeze_2: Unsqueeze */
  static void node_Unsqueeze_2_body(void) {
      nnc_unsqueeze(&tensor_Concat_1_output_0, &tensor_Unsqueeze_2_output_0, -1);
  }
  
  /* node_Tile: Tile */
  static void node_Tile_body(void) {
      static const int64_t node_Tile_repeats[] = {1, 1, 64};
      nnc_tile(&tensor_Unsqueeze_2_output_0, &tensor_Tile_output_0, (int64_t*)node_Tile_repeats, 3);
  }
  
  /* node_Transpose: Transpose */
  static void node_Transpose_body(void) {
      static const int64_t node_Transpose_perm[] = {0, 2, 1};
      nnc_transpose(&tensor_Tile_output_0, &tensor_Transpose_output_0, (int64_t*)node_Transpose_perm, 3);
  }
  
  /* node_Split: Split */
  static void node_Split_body(void) {
      static Tensor* node_Split_outputs[2] = {&tensor_Split_output_0, &tensor_Split_output_1};
      nnc_split(&tensor_Transpose_output_0, node_Split_outputs, 2, 2);
  }
  
  /* node_Greater_2: Greater */
  static void node_Greater_2_body(void) {
      nnc_greater(&tensor_Split_output_1, &tensor_Constant_12_output_0, &tensor_Greater_2_output_0);
  }
  
  /* node_Not: Not */
  static void node_Not_body(void) {
      nnc_not(&tensor_Greater_output_0, &tensor_Not_output_0);
  }
  
  /* node_And: And */
  static void node_And_body(void) {
      nnc_and(&tensor_Greater_output_0, &tensor_Greater_1_output_0, &tensor_And_output_0);
  }
  
  /* node_Or: Or */
  static void node_Or_body(void) {
      nnc_or(&tensor_Greater_output_0, &tensor_Greater_2_output_0, &tensor_Or_output_0);
  }
  
  /* node_Cast_7: Cast */
  static void node_Cast_7_body(void) {
      nnc_cast(&tensor_Not_output_0, &tensor_Cast_7_output_0, NNC_DTYPE_FLOAT32);
  }
  
  /* node_Cast_5: Cast */
  static void node_Cast_5_body(void) {
      nnc_cast(&tensor_And_output_0, &tensor_Cast_5_output_0, NNC_DTYPE_FLOAT32);
  }
  
  /* node_Cast_6: Cast */
  static void node_Cast_6_body(void) {
      nnc_cast(&tensor_Or_output_0, &tensor_Cast_6_output_0, NNC_DTYPE_FLOAT32);
  }
  
  /* node_Concat_2: Concat */
  static void node_Concat_2_body(void) {
      static Tensor* node_Concat_2_inputs[3] = {&tensor_Cast_5_output_0, &tensor_Cast_6_output_0, &tensor_Cast_7_output_0};
      nnc_concat(node_Concat_2_inputs, &tensor_Concat_2_output_0, 3, 1);
  }
  
  /* node_ReduceMean_1: ReduceMean */
  static void node_ReduceMean_1_body(void) {
      nnc_reducemean(&tensor_Concat_2_output_0, &tensor_output, 1, 0);
  }
  
  
  /* Main inference entry point */
  void nnc_run(void) {
      node_Add();
      node_Mul();
      node_Sub();
      node_Div();
      node_Pow();
      node_Clip();
      node_Add_1();
      node_Sqrt();
      node_Clip_1();
      node_Relu();
      node_MatMul();
      node_Reshape();
      node_ReduceMean();
      node_ReduceSum();
      node_Concat_1();
      node_Unsqueeze_2();
      node_Tile();
      node_Transpose();
      node_Split();
      node_Greater();
      node_Greater_1();
      node_Greater_2();
      node_Not();
      node_And();
      node_Or();
      node_Cast_7();
      node_Cast_5();
      node_Cast_6();
      node_Concat_2();
      node_ReduceMean_1();
  }
  
  // model.h
  // ============================================================
  /* Auto-generated by NTC - DO NOT EDIT */
  #ifndef MODEL_H
  #define MODEL_H
  
  #include <stdint.h>
  #include "nnc_types.h"
  
  /* Tensor declarations */
  extern Tensor tensor_input;
  extern Tensor tensor_output;
  extern Tensor tensor_Add_output_0;
  extern Tensor tensor_Mul_output_0;
  extern Tensor tensor_Sub_output_0;
  extern Tensor tensor_Div_output_0;
  extern Tensor tensor_Pow_output_0;
  extern Tensor tensor_Clip_output_0;
  extern Tensor tensor_Add_1_output_0;
  extern Tensor tensor_Sqrt_output_0;
  extern Tensor tensor_Clip_1_output_0;
  extern Tensor tensor_Relu_output_0;
  extern Tensor tensor_MatMul_output_0;
  extern Tensor tensor_Reshape_output_0;
  extern Tensor tensor_ReduceMean_output_0;
  extern Tensor tensor_ReduceSum_output_0;
  extern Tensor tensor_Concat_1_output_0;
  extern Tensor tensor_Unsqueeze_2_output_0;
  extern Tensor tensor_Tile_output_0;
  extern Tensor tensor_Transpose_output_0;
  extern Tensor tensor_Split_output_0;
  extern Tensor tensor_Split_output_1;
  extern Tensor tensor_Greater_output_0;
  extern Tensor tensor_Greater_1_output_0;
  extern Tensor tensor_Greater_2_output_0;
  extern Tensor tensor_And_output_0;
  extern Tensor tensor_Or_output_0;
  extern Tensor tensor_Not_output_0;
  extern Tensor tensor_Cast_5_output_0;
  extern Tensor tensor_Cast_6_output_0;
  extern Tensor tensor_Cast_7_output_0;
  extern Tensor tensor_Concat_2_output_0;
  extern Tensor tensor_weight;
  extern Tensor tensor_scale;
  extern Tensor tensor_Constant_output_0;
  extern Tensor tensor_Constant_1_output_0;
  extern Tensor tensor_Constant_2_output_0;
  extern Tensor tensor_Constant_5_output_0;
  extern Tensor tensor_onnx_ReduceSum_36;
  extern Tensor tensor_Constant_10_output_0;
  extern Tensor tensor_onnx_Shape_42;
  extern Tensor tensor_Constant_11_output_0;
  extern Tensor tensor_Constant_12_output_0;
  extern Tensor tensor_Cast_2_output_0;
  extern Tensor tensor_Concat_output_0;
  extern const int64_t tensor_onnx_ReduceSum_36_data[1];
  extern const int64_t tensor_Constant_10_output_0_data[1];
  extern const int64_t tensor_onnx_Shape_42_data[3];
  extern const int64_t tensor_Constant_11_output_0_data[2];
  extern const int64_t tensor_Concat_output_0_data[2];
  
  /* Constants loading function */
  int nnc_load_constants(const char* path);
  
  /* Main inference function */
  void nnc_run(void);
  
  #endif  // MODEL_H
  
  // tensors.c
  // ============================================================
  /* Auto-generated by NNC - DO NOT EDIT */
  #include "nnc_types.h"
  
  /* Dual Memory Pools (Fast + Slow for spilled tensors) */
  /* Fast memory: 131072 bytes (128.00 KB) */
  /* Slow memory: 1540140 bytes (1504.04 KB) */
  /* Buffers: 1, Spill points: 21, Reload points: 4 */
  
  /* Fast Memory Pool (SRAM/On-chip) */
  #define NNC_FAST_MEMORY_SIZE 131072
  #define NNC_MEMORY_ALIGNMENT 16
  static uint8_t _nnc_fast_pool[NNC_FAST_MEMORY_SIZE] __attribute__((aligned(NNC_MEMORY_ALIGNMENT))) = {0};
  
  /* Slow Memory Pool (DRAM/External) */
  #define NNC_SLOW_MEMORY_SIZE 1540140
  uint8_t _nnc_slow_pool[NNC_SLOW_MEMORY_SIZE] __attribute__((aligned(NNC_MEMORY_ALIGNMENT))) = {0};
  
  
  /* Tensor: input */
  static int64_t tensor_input_shape[] = {4, 64, 128};
  Tensor tensor_input = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_input_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: output */
  static int64_t tensor_output_shape[] = {4, 1};
  Tensor tensor_output = {
      .data = _nnc_fast_pool + 14032,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_output_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Add_output_0 */
  static int64_t tensor_Add_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Add_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Add_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Mul_output_0 */
  static int64_t tensor_Mul_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Mul_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Mul_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Sub_output_0 */
  static int64_t tensor_Sub_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Sub_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Sub_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Div_output_0 */
  static int64_t tensor_Div_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Div_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Div_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Pow_output_0 */
  static int64_t tensor_Pow_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Pow_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Pow_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Clip_output_0 */
  static int64_t tensor_Clip_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Clip_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Clip_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Add_1_output_0 */
  static int64_t tensor_Add_1_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Add_1_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Add_1_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Sqrt_output_0 */
  static int64_t tensor_Sqrt_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Sqrt_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Sqrt_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Clip_1_output_0 */
  static int64_t tensor_Clip_1_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Clip_1_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Clip_1_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Relu_output_0 */
  static int64_t tensor_Relu_output_0_shape[] = {4, 64, 128};
  Tensor tensor_Relu_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Relu_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /MatMul_output_0 */
  static int64_t tensor_MatMul_output_0_shape[] = {4, 64, 64};
  Tensor tensor_MatMul_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_MatMul_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Reshape_output_0 */
  static int64_t tensor_Reshape_output_0_shape[] = {4, 4096};
  Tensor tensor_Reshape_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Reshape_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /ReduceMean_output_0 */
  static int64_t tensor_ReduceMean_output_0_shape[] = {4, 1};
  Tensor tensor_ReduceMean_output_0 = {
      .data = _nnc_fast_pool + 0,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_ReduceMean_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /ReduceSum_output_0 */
  static int64_t tensor_ReduceSum_output_0_shape[] = {4, 1};
  Tensor tensor_ReduceSum_output_0 = {
      .data = _nnc_fast_pool + 32,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_ReduceSum_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Concat_1_output_0 */
  static int64_t tensor_Concat_1_output_0_shape[] = {4, 2};
  Tensor tensor_Concat_1_output_0 = {
      .data = _nnc_fast_pool + 48,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Concat_1_output_0_shape,
      .ndim = 2,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Unsqueeze_2_output_0 */
  static int64_t tensor_Unsqueeze_2_output_0_shape[] = {4, 2, 1};
  Tensor tensor_Unsqueeze_2_output_0 = {
      .data = _nnc_fast_pool + 96,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Unsqueeze_2_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Tile_output_0 */
  static int64_t tensor_Tile_output_0_shape[] = {4, 2, 64};
  Tensor tensor_Tile_output_0 = {
      .data = _nnc_fast_pool + 160,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Tile_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Transpose_output_0 */
  static int64_t tensor_Transpose_output_0_shape[] = {4, 64, 2};
  Tensor tensor_Transpose_output_0 = {
      .data = _nnc_fast_pool + 2208,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Transpose_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Split_output_0 */
  static int64_t tensor_Split_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Split_output_0 = {
      .data = _nnc_fast_pool + 4272,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Split_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Split_output_1 */
  static int64_t tensor_Split_output_1_shape[] = {4, 64, 1};
  Tensor tensor_Split_output_1 = {
      .data = _nnc_fast_pool + 5296,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Split_output_1_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Greater_output_0 */
  static int64_t tensor_Greater_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Greater_output_0 = {
      .data = _nnc_fast_pool + 6336,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Greater_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Greater_1_output_0 */
  static int64_t tensor_Greater_1_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Greater_1_output_0 = {
      .data = _nnc_fast_pool + 6608,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Greater_1_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Greater_2_output_0 */
  static int64_t tensor_Greater_2_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Greater_2_output_0 = {
      .data = _nnc_fast_pool + 6864,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Greater_2_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /And_output_0 */
  static int64_t tensor_And_output_0_shape[] = {4, 64, 1};
  Tensor tensor_And_output_0 = {
      .data = _nnc_fast_pool + 7376,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_And_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Or_output_0 */
  static int64_t tensor_Or_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Or_output_0 = {
      .data = _nnc_fast_pool + 7632,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Or_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Not_output_0 */
  static int64_t tensor_Not_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Not_output_0 = {
      .data = _nnc_fast_pool + 7120,
      .dtype = NNC_DTYPE_BOOL,
      .shape = tensor_Not_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Cast_5_output_0 */
  static int64_t tensor_Cast_5_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Cast_5_output_0 = {
      .data = _nnc_fast_pool + 8912,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Cast_5_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Cast_6_output_0 */
  static int64_t tensor_Cast_6_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Cast_6_output_0 = {
      .data = _nnc_fast_pool + 9936,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Cast_6_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Cast_7_output_0 */
  static int64_t tensor_Cast_7_output_0_shape[] = {4, 64, 1};
  Tensor tensor_Cast_7_output_0 = {
      .data = _nnc_fast_pool + 7888,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Cast_7_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  /* Tensor: /Concat_2_output_0 */
  static int64_t tensor_Concat_2_output_0_shape[] = {4, 192, 1};
  Tensor tensor_Concat_2_output_0 = {
      .data = _nnc_fast_pool + 10960,
      .dtype = NNC_DTYPE_FLOAT32,
      .shape = tensor_Concat_2_output_0_shape,
      .ndim = 3,
      .nbytes = <SIZE>,
  };
  
  
  '''
# ---
# name: TestIRSnapshots.test_large_operator_coverage_ir_snapshot
  GraphSnapshotWrapper(
    graph=Graph(name=main_graph, nodes=30, inputs=1, outputs=1),
  )
# ---
